search + Filter + Pagination 21/3

--- a/question2.html
+++ b/question2.html
@@ -101,7 +101,7 @@
     <div class="container pt-1">
         <ul class="breadcrumb">
           <li class="breadcrumb-item"><a href="./index.html">Trang chủ</a></li>
-          <li class="breadcrumb-item"><a href="./category.html">JavaScript Cơ Bản</a></li>
+          <li class="breadcrumb-item"><a href="./categorypage1.html">JavaScript Cơ Bản</a></li>
           <li class="breadcrumb-item"><a href="./quizz.html">JavaScript Cơ Bản</a></li>
           <li class="breadcrumb-item active">Question 2</li>
         </ul>
