--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
               <div class="dropdown">
                 <a href="" class=" nav-link dropdown-toggle" id="dropdownSubMenu1" data-bs-toggle="dropdown"  aria-expanded="true"><i class="bi bi-folder"></i> Danh mục môn học</a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownSubMenu1">
-                  <li><a class="dropdown-item" href="./category.html">Lập trình PHP</a></li>
-                  <li><a class="dropdown-item" href="./category.html">SQL Server</a></li>
-                  <li><a class="dropdown-item" href="./category.html">Kiểm thử và Triển khai</a></li>
-                  <li><a class="dropdown-item" href="./category.html">Thiết kế layout</a></li>
-                  <li><a class="dropdown-item" href="./category.html">JavaScript cơ bản</a></li>
-                  <li><a class="dropdown-item" href="./category.html">JavaScript cơ bản</a></li>
+                  <li><a class="dropdown-item" href="./categorypage1.html">Lập trình PHP</a></li>
+                  <li><a class="dropdown-item" href="./categorypage1.html">SQL Server</a></li>
+                  <li><a class="dropdown-item" href="./categorypage1.html">Kiểm thử và Triển khai</a></li>
+                  <li><a class="dropdown-item" href="./categorypage1.html">Thiết kế layout</a></li>
+                  <li><a class="dropdown-item" href="./categorypage1.html">JavaScript cơ bản</a></li>
+                  <li><a class="dropdown-item" href="./categorypage1.html">JavaScript cơ bản</a></li>
                 </ul>
               </div>
             </li>
@@ -68,18 +68,24 @@
             <li class="nav-item ">
               <a href="./commons/Q&A.html" class="nav-link "><i class="bi bi-chat-dots"></i> Hỏi đáp</a>
             </li>
-            <li class="nav-item ">
-              <div class="dropdown">
-                <a href="" class=" nav-link dropdown-toggle" id="dropdownSubMenu1" data-bs-toggle="dropdown"  aria-expanded="true"><i class="bi bi-person-circle"></i> Tài khoản</a>
-                <ul class="dropdown-menu" aria-labelledby="dropdownSubMenu1">
-                  <li><a class="dropdown-item" href="./infoAccount.html">Thông tin tài khoản</a></li>
-                  <li><a class="dropdown-item" href="./updateAccount.html">Sửa thông tin</a></li>
-                  <li><a class="dropdown-item" href="./changePass.html">Đổi mật khẩu</a></li>
-                  <li><a class="dropdown-item" href="">Đăng xuất</a></li>
-                </ul>
-              </div>
-            </li>
+              <li class="nav-item ">
+                <div class="dropdown">
+                  <a href="" class=" nav-link dropdown-toggle" id="dropdownSubMenu1" data-bs-toggle="dropdown"  aria-expanded="true"><i class="bi bi-person-circle"></i> Tài khoản</a>
+                  <ul class="dropdown-menu" aria-labelledby="dropdownSubMenu1">
+                    <li><a class="dropdown-item" href="./infoAccount.html">Thông tin tài khoản</a></li>
+                    <li><a class="dropdown-item" href="./updateAccount.html">Sửa thông tin</a></li>
+                    <li><a class="dropdown-item" href="./changePass.html">Đổi mật khẩu</a></li>
+                    <li><a class="dropdown-item" href="">Đăng xuất</a></li>
+                  </ul>
+                </div>
+              </li>
           </ul>
+        </div>
+        <div class="reasearch me-3 border border-2 d-flex rounded-1 ">
+          <input type="text" name="research" id="reasearch" class="form-control border-0  " placeholder="Tìm kiếm">
+          <button class="btn btn-light border-0 ">
+            <a href="./categorypage1.html"><i class="bi bi-search"></i></a> 
+          </button>
         </div>
         <div class="account-box">
           <ul class="navbar-nav ">
@@ -204,7 +210,7 @@
               <span>JavaScript</span>
             </div>
             <div class="quiz-moreInfo">
-              <a href="./category.html"  class="btn btn-info ">Xem thêm</a>
+              <a href="./categorypage1.html"  class="btn btn-info ">Xem thêm</a>
             </div>
           </div>
           <div class="section-quizzes my-2 ">
@@ -336,7 +342,7 @@
               <span>JavaScript</span>
             </div>
             <div class="quiz-moreInfo">
-              <a href=./category.html"" class="btn btn-info ">Xem thêm</a>
+              <a href=./categorypage1.html"" class="btn btn-info ">Xem thêm</a>
             </div>
           </div>
           <div class="section-quizzes my-2">
@@ -467,7 +473,7 @@
               <span>JavaScript</span>
             </div>
             <div class="quiz-moreInfo">
-              <a href=./category.html"" class="btn btn-info ">Xem thêm</a>
+              <a href=./categorypage1.html"" class="btn btn-info ">Xem thêm</a>
             </div>
           </div>
           <div class="section-quizzes my-2">
