--- a/quizz.html
+++ b/quizz.html
@@ -27,7 +27,7 @@
               <div class="dropdown">
                 <a href="" class=" nav-link dropdown-toggle" id="dropdownSubMenu1" data-bs-toggle="dropdown"  aria-expanded="true"><i class="bi bi-folder"></i> Danh mục môn học</a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownSubMenu1">
-                  <li><a class="dropdown-item" href="#">Lập trình PHP</a></li>
+                  <li><a class="dropdown-item" href="./category.html">Lập trình PHP</a></li>
                   <li><a class="dropdown-item" href="#">SQL Server</a></li>
                   <li><a class="dropdown-item" href="#">Kiểm thử và Triển khai</a></li>
                   <li><a class="dropdown-item" href="#">Thiết kế layout</a></li>
