--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
               <div class="dropdown">
                 <a href="" class=" nav-link dropdown-toggle" id="dropdownSubMenu1" data-bs-toggle="dropdown"  aria-expanded="true"><i class="bi bi-folder"></i> Danh mục môn học</a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownSubMenu1">
-                  <li><a class="dropdown-item" href="./category.html">Lập trình PHP</a></li>
-                  <li><a class="dropdown-item" href="./category.html">SQL Server</a></li>
-                  <li><a class="dropdown-item" href="./category.html">Kiểm thử và Triển khai</a></li>
-                  <li><a class="dropdown-item" href="./category.html">Thiết kế layout</a></li>
-                  <li><a class="dropdown-item" href="./category.html">JavaScript cơ bản</a></li>
-                  <li><a class="dropdown-item" href="./category.html">JavaScript cơ bản</a></li>
+                  <li><a class="dropdown-item" href="#!/category">Lập trình PHP</a></li>
+                  <li><a class="dropdown-item" href="#!/category">SQL Server</a></li>
+                  <li><a class="dropdown-item" href="#!/category">Kiểm thử và Triển khai</a></li>
+                  <li><a class="dropdown-item" href="#!/category">Thiết kế layout</a></li>
+                  <li><a class="dropdown-item" href="#!/category">JavaScript cơ bản</a></li>
+                  <li><a class="dropdown-item" href="#!/category">JavaScript cơ bản</a></li>
                 </ul>
               </div>
             </li>
