--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.min.css">
     <script src="./angular-1.8.2/angular.min.js"></script>
     <script src="./angular-1.8.2/angular-route.min.js"></script>
-    <script src="controllers/main.js"></script>
-
   </head>
 <body ng-app="myApp">
   <div class="text-center">
@@ -178,6 +176,8 @@
   </div>
  </footer>
  <script src="route.js"></script>
+ <script src="controllers/main.js"></script>
+ <script src="controllers/QuestionController.js"></script>
  <script src="controllers/DashboardController.js"></script>
 </body>
 </html>
