--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
               <div class="dropdown">
                 <a href="" class=" nav-link dropdown-toggle" id="dropdownSubMenu1" data-bs-toggle="dropdown"  aria-expanded="true"><i class="bi bi-folder"></i> Danh mục môn học</a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownSubMenu1">
-                  <li><a class="dropdown-item" href="#!/category">Lập trình PHP</a></li>
                   <li><a class="dropdown-item" href="#!/category">SQL Server</a></li>
                   <li><a class="dropdown-item" href="#!/category">Kiểm thử và Triển khai</a></li>
                   <li><a class="dropdown-item" href="#!/category">Thiết kế layout</a></li>
@@ -179,5 +178,6 @@
  <script src="controllers/main.js"></script>
  <script src="controllers/QuestionController.js"></script>
  <script src="controllers/DashboardController.js"></script>
+ <script src="controllers/Logincontroller.js"></script>
 </body>
 </html>
